# Test_delta

./: .env_example  .gitignore  Dockerfile  README.md  docker-compose.yaml  docker.env_example  main.py  pyproject.toml
alembic/versions/: b460382625e0_.py
app/api/endpoints/: commands.py  package.py  parcel.py
app/api/external_api/: get_usb_to_rub.py
app/api/schemas/: parcel.py
app/core/: config.py
app/db/: database.py  models.py  redis.py
app/usecases/: usecases.py
