[project]
name = "test-delta"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "alembic>=1.14.1",
    "psycopg[binary]>=3.2.4",
    "pydantic-settings>=2.8.1",
]
