[project]
name = "test-delta"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.7",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
    "alembic>=1.14.1",
    "pydantic-settings>=2.8.1",
    "databases>=0.9.0",
    "aiomysql>=0.2.0",
    "pymysql>=1.1.1",
    "cryptography>=44.0.2",
    "itsdangerous>=2.2.0",
    "apscheduler>=3.11.0",
    "setuptools>=78.1.0",
    "wheel>=0.45.1",
    "redis>=5.2.1",
]
